--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 
 *{
@@ -15,7 +16,7 @@ body{
     align-items: center;
     min-height: 100vh;
     background-color: #2A2B2E;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Patrick Hand';
 }
 
 .form_contact__container{
@@ -46,6 +47,10 @@ body{
     align-items: center;
 }
 
+.contact h2 {
+    font-family:'Bangers';
+}
+
 .submit_form{
     background-color: whitesmoke;
     display: flex;
@@ -59,6 +64,11 @@ body{
     font-size: 30px;
     padding: 20px;
     font-weight: 600;
+    font-family:'Bangers';
+}
+
+.intro_contact_text{
+    padding: 0px 15px;
 }
 
 .first_title{
@@ -132,6 +142,13 @@ form{
     gap: 20px;
 }
 
+@media(min-width: 320px) {
+    form{
+        height: auto;
+        padding: 8px 10px;
+    }
+}
+
 .input_box{
     width: 70%;
     margin: 0 auto;
@@ -152,10 +169,19 @@ form{
     border: 1px solid black;
     border-radius: 7px;
     cursor: pointer;
+    transition: all ease-in-out .3s;
+}
+
+.btn_submit:hover{
+    transform: scale(1.1);
 }
 
 .input_text{
     border-radius: 7px;
+}
+
+.social_links_form{
+    display: none;
 }
 
 @media(max-width: 800px){
@@ -163,6 +189,17 @@ form{
         grid-template-columns: 1fr;
     }
     .contact{
+        display: none;
+    }
+
+    .social_links_form{
+        display: block;
+        margin-top: 10px;
+    }
+}
+
+@media(max-width: 503px){
+    .social_links_form{
         display: none;
     }
 }
