--- a/front/css/detail.css
+++ b/front/css/detail.css
@@ -11,6 +11,15 @@ body{
     line-height: 1.5;
 }
 
+.contenedor_full{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px; 
+}
+
+
 .card-wrapper{
     max-width: 1100px;
     margin: 0 auto;
@@ -148,7 +157,7 @@ img{
 .product-detail ul li{
     margin: 0;
     list-style: none;
-    background: url(imagenes/comic-check-mark.png) left center no-repeat;
+    background: url(/front/images/comic-check-mark.png) left center no-repeat;
     background-size: 18px;
     padding-left: 1.7rem;
     margin: 0.4rem 0;
@@ -249,4 +258,129 @@ img{
 
 /*<----------Style Product Detail--------->*/
 
+/*<----------Navbar--------->*/
+nav ul li a{
+    font-family: 'Bangers', sans-serif;
+    color: #fcd69e;
+    font-size: 1.5rem;
+    position: relative; 
+    text-decoration: none;
+    padding: 8px 6px;  
+}
 
+nav ul li a::before{
+    position: absolute;
+    content: '';
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 100%;
+    background: #e5ac57;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .4s linear;
+}
+
+nav ul li a:hover:before{
+    transform: scaleX(1);
+    transform-origin: left;
+
+}
+
+
+
+.new-li a:hover{
+    color: #e5ac57;
+    box-shadow: #9a1515 2px;
+    
+}
+
+.logo-new{    
+    width: 110px;     
+    position: absolute;
+    top: 10px;
+    left: 5%;
+}
+
+nav{
+    height: 80px;
+    background-color: #1e1e1e;
+    border-radius: 2px #ddd7d7;
+}
+
+nav ul{
+    text-align: right; 
+    margin-right: 25px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px; 
+    margin: 0 15px; 
+}
+
+label #btn-nav,
+label #cancel{
+    color: #fcd69e;
+    font-size: 30px;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+
+}
+
+@media (max-width: 944px) {
+    nav img{
+        left: 6%;
+        top: 20px;
+        width: 130px;
+    }
+    nav ul li a{
+        font-size: 17px;
+    }
+}
+
+
+@media (max-width: 860px) {
+    label #btn-nav{
+        display: block;
+    }
+    nav ul{        
+        width: 100%;
+        height: 100vh;
+        background: #1e1e1e;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+        position: absolute;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    #check:checked ~ ul{
+        left: 0;
+        
+    }
+    .img-showcase{
+        position: static;
+    }
+    #check:checked ~ label #btn-nav {
+        display: none;
+    }
+    #check:checked ~ label #cancel{
+        display: block;
+    }
+    
+}
