--- a/front/css/detail.css
+++ b/front/css/detail.css
@@ -2,13 +2,14 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    background-color: #1e1e1e;
-    color: #ffffff;    
+    text-decoration: none;   
 }
 
 /*<----------Style Product Detail (9/250--------->*/
 body{
     line-height: 1.5;
+    background-color: #1e1e1e;
+    color: #ffffff;
 }
 
 .contenedor_full{
@@ -201,8 +202,6 @@ img{
     background-color: #000000;
 }
 
-
-
 .purchase-info .btn-shop:last-of-type:hover{
     background-color: #e5ac57;
     color: #1e1e1e;
@@ -383,4 +382,108 @@ label #cancel{
         display: block;
     }
     
+}
+
+/*<----------Footer--------->*/
+
+#footer{
+    background-color: #e5ac57;
+    padding: 40px 0;
+}
+
+#footer .container{
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+
+
+.footer-row{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #e5ac57;
+}
+
+.footer-links{
+    width: 25%;
+    padding: 0 15px;
+    text-decoration: none;
+}
+
+.footer-links h4{
+    font-size: 20px;    
+    margin-bottom: 25px;
+    font-weight: 500;
+    border-bottom: 2px solid #1e1e1e;
+    padding-bottom: 10px;
+    display: inline-block;
+    font-family: 'Bangers', sans-serif;
+    color: #fbf0f0;
+    -webkit-text-stroke: 1.2px black;
+    text-shadow: #fbf0f0 0 -2px;
+}
+
+li{
+    text-decoration: none;
+}
+
+.footer-links ul li a{
+    font-size: 15px;
+    text-decoration: none;
+    color: #1e1e1e;
+    display: block;
+    margin-bottom: 15px;
+    transition: all .3s ease;
+    font-family: 'Patrick Hand', sans-serif;
+    font: bold;    
+}
+
+.footer-links ul li a::after{
+    color: #9a1515;
+    padding-left: 6px;
+}
+
+.social-link a{
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 35px;
+    height: 35px;
+    padding: 3px 2px 0 2px;
+    color: #fcd69e;
+    background-color: #1e1e1e;
+    margin: 0 0.2rem;
+    border-radius: 50%;
+    text-decoration: none;
+    font-size: 1.2rem;
+    transition: all 0.5s ease; 
+}
+
+.social-link a:hover{
+    background-color: #9a1515;   
+}
+
+.social-link a i:hover{    
+    color: #fcd69e;
+    font-size: 1.5rem;
+}
+
+
+.copyright{
+    color: #fbf0f0;
+    background-color: #795622;
+    text-align: center;    
+    font-family:'Architects Daughter', sans-serif;
+}
+
+@media (max-width: 860px){
+    .footer-row{
+        text-align: center;
+    }
+    .footer-links{
+        width: 100%;
+        margin-bottom: 30px;
+
+    }
 }
