--- a/front/css/registro.css
+++ b/front/css/registro.css
@@ -16,12 +16,12 @@ body{
 }
 .form-register{
      width: 600px;
-     height: 600px;
-     background: #1e1e1e; ;
+     height: 680px;
+     background: #1e1e1e;
      margin: auto;
-     margin-top: 100px;
+     margin-top: 2rem;
      box-shadow: 7px 13px 37px #000;
-     padding: 5px 30px;
+     padding: 5px 40px;
      border-top: 20px solid #9a1515;
       color: #ffffff;
 }
@@ -77,3 +77,20 @@ body{
 .form-register a:hover {
     text-decoration: underline;
 }
+
+.go_back{
+       text-decoration: none;
+       background-color: #008bce;
+       color: whitesmoke;
+       padding: 10px 20px;
+       font-weight: bold;
+       letter-spacing: 1px;
+       font-size: larger;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+   }
+   
+   .go_back:hover{
+       transform: scale(1.1);
+   }
