--- a/front/css/styles_about.css
+++ b/front/css/styles_about.css
@@ -12,19 +12,102 @@ body {
     overflow-x: hidden;
 }
 
-header {
-    background-color: #1e1e1e;
-    color: #fbf0f0;
-    font-family: 'Architects Daughter', sans-serif;
-    text-align: center;
+/*<----------Navbar--------->*/
+header{
+    width: 100%;
     height: 80px;
-    border-bottom: red 1px solid;
+    position: absolute;
+    top: 0;
+    background-color: #1e1e1e;
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+  
+  .logo{
+    object-fit: contain;
+    width: 100px;
+  }
+  
+  .logo:hover{
+    transform: scale(1.1);
+  }
+  
+  .nav__links li {
+    display: inline-block;
+    color: #fcd69e;
+    padding: 8px 6px;
+  }
+  
+  .nav__links li a {
+    font-family: 'Bangers', sans-serif;
+    font-size: 1.5rem;
+    color: #fcd69e;
+  }
+  
+  .nav__links a:hover {
+    color: #e5ac57;
+    box-shadow: #9a1515 2px;
+  }
+  
+  label #btn-nav,
+  label #cancel{
+    color: #fcd69e;
+    font-size: 30px;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+  } 
+  
+  #check{
+    display: none;
+  
+  }
+  
+  @media (max-width: 860px) {
+    label #btn-nav{
+      display: block;
+    }
+    nav ul{        
+      width: 100%;
+      height: 80vh;
+      background: #1e1e1e;
+      top: 80px;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
+      position: absolute;
+      z-index: 100;
+      display: flex;
+      flex-direction: column;
+    }
+    nav ul li{
+      display: block;
+      margin: 20px 0;
+      line-height: 30px;
+    }
+    nav ul li a{
+      font-size: 20px;
+    }
+    #check:checked ~ ul{
+      left: 0;
+    }
+    #check:checked ~ label #btn-nav {
+      display: none;
+    }
+    #check:checked ~ label #cancel{
+      display: block;
+    } 
+  }
+  /* <----------End Navbar---------> */
 
 #aboutMain {
-    padding-top: 0.5em;
     color: #88ACE0;
     background-color: #1e1e1e;
+    margin-top: 4rem;
 }
 
 #aboutMain h1 {
@@ -33,6 +116,7 @@ header {
     font-family: 'Bangers', sans-serif;
     color: #fbf0f0;
     text-align: center;
+    padding: 4rem;
 }
 
 #aboutLogo {
@@ -52,7 +136,6 @@ p {
     justify-content: center;
     align-items: center;
     font-weight: bold;
-
     text-align: center;
     padding: 10px;
 }
@@ -166,3 +249,109 @@ p {
         float: right;
     }
 }
+
+/*<----------Footer--------->*/
+#footer{
+  background-color: #e5ac57;
+  padding: 1rem;
+  width: 100%;
+}
+
+#footer .container{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-row{
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #e5ac57;
+}
+
+.footer-links{
+  width: 25%;
+  padding: 0 15px;
+  text-decoration: none;
+}
+
+.footer-links h4{
+  font-size: 20px;    
+  margin-bottom: 25px;
+  font-weight: 500;
+  border-bottom: 2px solid #1e1e1e;
+  padding-bottom: 10px;
+  display: inline-block;
+  font-family: 'Bangers', sans-serif;
+  color: #fbf0f0;
+  -webkit-text-stroke: 1.2px black;
+  text-shadow: #fbf0f0 0 -2px;
+}
+
+li{
+  text-decoration: none;
+}
+
+.footer-links ul li a{
+  font-size: 15px;
+  text-decoration: none;
+  color: #1e1e1e;
+  display: block;
+  margin-bottom: 15px;
+  transition: all .3s ease;
+  font-family: 'Patrick Hand', sans-serif;
+  font: bold;    
+}
+
+.footer-links ul li a::after{
+  color: #9a1515;
+  padding-left: 6px;
+}
+
+.social-link a{
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 35px;
+  height: 35px;
+  padding: 3px 2px 0 2px;
+  color: #fcd69e;
+  background-color: #1e1e1e;
+  margin: 0 0.2rem;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: all 0.5s ease; 
+}
+
+.social-link a:hover{
+  background-color: #9a1515;   
+}
+
+.social-link a i:hover{    
+  color: #fcd69e;
+  font-size: 1.5rem;
+}
+
+
+.copyright{
+  color: whitesmoke;
+  background-color:#795622;
+  text-align: center;    
+  font-family:'Architects Daughter', sans-serif;
+  padding: 10px;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 860px){
+  .footer-row{
+      text-align: center;
+  }
+  .footer-links{
+      width: 100%;
+      margin-bottom: 30px;
+
+  }
+}
+/* ------------End Footer------------- */
