cambio efecto a las cards

--- a/front/css/productos.css
+++ b/front/css/productos.css
@@ -37,7 +37,7 @@
 */
 
 /*<----------Navbar--------->*/
-header{
+header {
   width: 100%;
   height: 80px;
   position: absolute;
@@ -49,16 +49,16 @@ header{
   background-color: #1e1e1e;
 }
 
-.navbar{
+.navbar {
   padding: 10px;
 }
 
-.logo{
+.logo {
   object-fit: contain;
   width: 120px;
 }
 
-.logo:hover{
+.logo:hover {
   transform: scale(1.1);
 }
 
@@ -70,7 +70,7 @@ header{
 }
 
 .nav__links li a {
-  font-family: 'Bangers', sans-serif;
+  font-family: "Bangers", sans-serif;
   font-size: 1.5rem;
   color: #fcd69e;
 }
@@ -81,7 +81,7 @@ header{
 }
 
 label #btn-nav,
-label #cancel{
+label #cancel {
   color: #fcd69e;
   font-size: 30px;
   float: right;
@@ -89,46 +89,46 @@ label #cancel{
   margin-right: 40px;
   cursor: pointer;
   display: none;
-} 
+}
 
-#check{
+#check {
   display: none;
 }
 
 @media (max-width: 860px) {
-  label #btn-nav{
+  label #btn-nav {
     display: block;
   }
-  nav ul{        
+  nav ul {
     width: 100%;
     height: 80vh;
     background: #1e1e1e;
     top: 80px;
     left: -100%;
     text-align: center;
-    transition: all .5s;
+    transition: all 0.5s;
     position: absolute;
     z-index: 100;
     display: flex;
     flex-direction: column;
   }
-  nav ul li{
+  nav ul li {
     display: block;
     margin: 20px 0;
     line-height: 30px;
   }
-  nav ul li a{
+  nav ul li a {
     font-size: 20px;
   }
-  #check:checked ~ ul{
+  #check:checked ~ ul {
     left: 0;
   }
   #check:checked ~ label #btn-nav {
     display: none;
   }
-  #check:checked ~ label #cancel{
+  #check:checked ~ label #cancel {
     display: block;
-  } 
+  }
 }
 /* <----------End Navbar---------> */
 
@@ -178,19 +178,13 @@ section {
   align-items: center;
   perspective: 800px;
 }
-/*#card_section-root section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  perspective: 800px;
-}*/
+
 #card_section-root div {
   margin: 25px;
   padding: 25px;
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
-  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  /*transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);*/
   background-color: #0a0000;
   border-radius: 20px;
 }
@@ -227,34 +221,8 @@ section {
   transform: translateY(-10px);
   box-shadow: 1.25px 1.25px 10px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-  transform: rotateY(180deg);
+  /* transform: rotateY(180deg);*/
 }
-
-/*img  {
-  height: 75%;
-  width: 100%;
-  border-radius: 2rem;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  transform: rotateY(180deg);
-}
-
- /*img .back {
-  transform: rotateY(180deg);
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
-}*/
-
-/*.titulo {
-  width: 100%;
-  justify-content: center;
-  text-align: center;
-}*/
 
 div.card_section-titulo a {
   background-color: var(--background-titulo);
@@ -327,10 +295,10 @@ h1 {
   background-color: var(--background);
 }
 
- .card-content {
-  transform: rotateY(-360deg);
- text-align: center
-};
+.card-content {
+  /*transform: rotateY(-360deg);*/
+  text-align: center;
+}
 /*
 
 
@@ -362,7 +330,7 @@ h1 {
     padding: 25px;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    /*transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);*/
     background-color: #0a0000;
   }
 
@@ -407,7 +375,7 @@ h1 {
     padding: 0px;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    /*transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);*/
     background-color: #0a0000;
   }
   #card_section-titulo {
@@ -461,65 +429,64 @@ h1 {
   }
 }
 
-
 /*<----------Footer--------->*/
-#footer{
+#footer {
   background-color: #e5ac57;
   padding: 1rem;
   width: 100%;
 }
 
-#footer .container{
+#footer .container {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-.footer-row{
+.footer-row {
   display: flex;
   flex-wrap: wrap;
   background-color: #e5ac57;
 }
 
-.footer-links{
+.footer-links {
   width: 25%;
   padding: 0 15px;
   text-decoration: none;
 }
 
-.footer-links h4{
-  font-size: 20px;    
+.footer-links h4 {
+  font-size: 20px;
   margin-bottom: 25px;
   font-weight: 500;
   border-bottom: 2px solid #1e1e1e;
   padding-bottom: 10px;
   display: inline-block;
-  font-family: 'Bangers', sans-serif;
+  font-family: "Bangers", sans-serif;
   color: #fbf0f0;
   -webkit-text-stroke: 1.2px black;
   text-shadow: #fbf0f0 0 -2px;
 }
 
-li{
+li {
   text-decoration: none;
 }
 
-.footer-links ul li a{
+.footer-links ul li a {
   font-size: 15px;
   text-decoration: none;
   color: #1e1e1e;
   display: block;
   margin-bottom: 15px;
-  transition: all .3s ease;
-  font-family: 'Patrick Hand', sans-serif;
-  font: bold;    
+  transition: all 0.3s ease;
+  font-family: "Patrick Hand", sans-serif;
+  font: bold;
 }
 
-.footer-links ul li a::after{
+.footer-links ul li a::after {
   color: #9a1515;
   padding-left: 6px;
 }
 
-.social-link a{
+.social-link a {
   display: inline-block;
   align-items: center;
   justify-content: center;
@@ -533,14 +500,14 @@ li{
   border-radius: 50%;
   text-decoration: none;
   font-size: 1.2rem;
-  transition: all 0.5s ease; 
+  transition: all 0.5s ease;
 }
 
-.social-link a:hover{
-  background-color: #9a1515;   
+.social-link a:hover {
+  background-color: #9a1515;
 }
 
-.social-link a i:hover{    
+.social-link a i:hover {
   color: #fcd69e;
   font-size: 1.5rem;
 }
@@ -551,24 +518,23 @@ li{
   justify-content: center;
 }
 
-.copyright{
+.copyright {
   color: whitesmoke;
-  background-color:#795622;
-  text-align: center;    
-  font-family:'Architects Daughter', sans-serif;
+  background-color: #795622;
+  text-align: center;
+  font-family: "Architects Daughter", sans-serif;
   padding: 10px;
   width: 100%;
   font-size: 1.2rem;
 }
 
-@media (max-width: 860px){
-  .footer-row{
-      text-align: center;
+@media (max-width: 860px) {
+  .footer-row {
+    text-align: center;
   }
-  .footer-links{
-      width: 100%;
-      margin-bottom: 30px;
-
+  .footer-links {
+    width: 100%;
+    margin-bottom: 30px;
   }
 }
 /* ------------End Footer------------- */
