--- a/front/css/registro.css
+++ b/front/css/registro.css
@@ -12,8 +12,8 @@ body{
     background: url(../images/fondo2.jpg);
     background-size: cover;
     background-attachment: fixed
-       
 }
+
 .form-register{
      width: 600px;
      height: 680px;
@@ -25,6 +25,7 @@ body{
      /* border-top: 20px solid #9a1515; */
       color: #ffffff;
 }
+
 .form-register h1{
      text-align: center;
      font-size: 3rem;
@@ -34,6 +35,7 @@ body{
      -webkit-text-stroke: 1.2px black;
      text-shadow: #fbf0f0 0 -2px;
 }
+
 .form-register h5{
        margin: 0;
        text-align: center;
@@ -43,7 +45,8 @@ body{
        font-size: 2rem;
        color:#fcd69e ;  
 }
-.nombre, .correo, .telefono, .Direccion, .clave, .confirmarClave {
+
+.form__field {
        display: flex;
        flex-direction: column;
        width: 100%;
@@ -53,6 +56,7 @@ body{
        font-size: 1.3rem;
        font-weight: bold;
 }
+
 .button{
        width: 100%;
        height: 40px;
@@ -61,7 +65,9 @@ body{
        color: #1e1e1e;
        margin-bottom: 16px;
        font-size: 1.5rem;
+       cursor: pointer;
 }
+
 .form-register p{
        height: 40px;
        text-align: center;
@@ -73,6 +79,7 @@ body{
        text-decoration: none;
        font-size: 14px;
 }
+
 .form-register a:hover {
     text-decoration: underline;
 }
@@ -89,8 +96,8 @@ body{
        width: 100px;
        height: 65px;
        margin-left: 15px;
-    
 }
+
 input{
        height: 30px;
 }
@@ -106,8 +113,24 @@ input{
        display: flex;
        align-items: center;
        justify-content: center;
-   }
+}
    
-   .go_back:hover{
+.go_back:hover{
        transform: scale(1.1);
-   }
+}
+
+.form__field.error input {
+       border: solid 2px red;
+}
+   
+.form__field.success input {
+       border: solid 2px rgb(13, 167, 13);
+}
+   
+.form__field small{
+       text-align: center;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       color:#ce2d2d;
+}
